--- a/2011년수명주기.ipynb
+++ b/2011년수명주기.ipynb
@@ -999,7 +999,9 @@
     "    else:\n",
     "        df_1.loc[i,'기업수명'] = 4\n",
     "        \n",
-    "    # 연결\n",
+    "    # 연결일 경우\n",
+    "        \n",
+    "    # 도입기\n",
     "    if df_1.loc[i,'영업활동(연결)'] == 0 and df_1.loc[i,'투자활동(연결)'] == 0 and df_1.loc[i,'재무활동(연결)'] == 1:\n",
     "        df_1.loc[i,'기업수명(연결)'] = 1\n",
     "    # 성장기\n",
@@ -1035,7 +1037,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1.to_csv('기업수명주기.csv',encoding='cp949')"
+    "# df_1.to_csv('기업수명주기.csv',encoding='cp949')"
    ]
   },
   {
@@ -1401,9 +1403,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.loc[i,abs(df['영업활동으로 인한 현금흐름(간접법)(*)(IFRS)(천원']-df['영업활동으로 인한 현금흐름(간접법)(*)(IFRS)(천원'].diff())]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
