--- a/2011년투자활동현금흐름.ipynb
+++ b/2011년투자활동현금흐름.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "[15150 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "9                    -23347990.0    minus        minus  26649125.0  23347990.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,13 +647,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2949864071.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [7]\u001b[1;36m\u001b[0m\n\u001b[1;33m    df.\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(len(df)):\n",
-    "    if df.loc[i,'투자활동플마여부'] == 'minus' and df.loc[i-1,'투자활동플마여부'] == 'minus':\n",
-    "        df."
+    "    if df.loc[i+1,'투자활동플마여부'] == 'minus' and df.loc[i,'투자활동플마여부'] == 'minus':\n",
+    "        (df.loc[i+1,'투자활동으로 인한 현금흐름(*)(IFRS)(천원)'] - df.loc[i,'절대값']"
    ]
   }
  ],
