--- a/2011년전체데이터 copy.ipynb
+++ b/2011년전체데이터 copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "[15150 rows x 6 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "[15150 rows x 6 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
        "[15150 rows x 6 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
        "[4476 rows x 6 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -959,40 +959,40 @@
        "      <td>-0.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>(주)HJ중공업</td>\n",
-       "      <td>97230</td>\n",
-       "      <td>11-Dec</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>0.55</td>\n",
-       "      <td>0.55</td>\n",
+       "      <th>1</th>\n",
+       "      <td>(주)DB하이텍</td>\n",
+       "      <td>990</td>\n",
+       "      <td>12-Dec</td>\n",
+       "      <td>-0.29</td>\n",
+       "      <td>-0.31</td>\n",
+       "      <td>-0.31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>(주)ST</td>\n",
-       "      <td>11810</td>\n",
-       "      <td>11-Dec</td>\n",
+       "      <th>2</th>\n",
+       "      <td>(주)DB하이텍</td>\n",
+       "      <td>990</td>\n",
+       "      <td>13-Dec</td>\n",
+       "      <td>-0.16</td>\n",
+       "      <td>-0.16</td>\n",
+       "      <td>-0.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(주)DB하이텍</td>\n",
+       "      <td>990</td>\n",
+       "      <td>14-Dec</td>\n",
        "      <td>0.67</td>\n",
-       "      <td>1.66</td>\n",
-       "      <td>1.66</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>(주)TCC스틸</td>\n",
-       "      <td>2710</td>\n",
-       "      <td>11-Dec</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1.41</td>\n",
-       "      <td>1.41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>(주)강스템바이오텍</td>\n",
-       "      <td>217730</td>\n",
+       "      <th>4</th>\n",
+       "      <td>(주)DB하이텍</td>\n",
+       "      <td>990</td>\n",
        "      <td>15-Dec</td>\n",
-       "      <td>-5.41</td>\n",
-       "      <td>77777777.77</td>\n",
-       "      <td>-5.41</td>\n",
+       "      <td>2.49</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1004,99 +1004,86 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4435</th>\n",
-       "      <td>현대바이오사이언스(주)</td>\n",
-       "      <td>48410</td>\n",
-       "      <td>11-Dec</td>\n",
-       "      <td>-17.26</td>\n",
-       "      <td>-18.41</td>\n",
-       "      <td>-18.41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4444</th>\n",
-       "      <td>현우산업(주)</td>\n",
-       "      <td>92300</td>\n",
-       "      <td>11-Dec</td>\n",
-       "      <td>2.86</td>\n",
-       "      <td>2.86</td>\n",
-       "      <td>2.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4453</th>\n",
-       "      <td>휴림로봇(주)</td>\n",
-       "      <td>90710</td>\n",
-       "      <td>11-Dec</td>\n",
-       "      <td>3.57</td>\n",
-       "      <td>2.96</td>\n",
-       "      <td>2.96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4462</th>\n",
-       "      <td>휴마시스(주)</td>\n",
-       "      <td>205470</td>\n",
-       "      <td>14-Dec</td>\n",
-       "      <td>77777777.77</td>\n",
-       "      <td>-0.76</td>\n",
-       "      <td>-0.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4468</th>\n",
+       "      <th>4471</th>\n",
        "      <td>흥아해운(주)</td>\n",
        "      <td>3280</td>\n",
-       "      <td>11-Dec</td>\n",
-       "      <td>-0.37</td>\n",
-       "      <td>-0.33</td>\n",
-       "      <td>-0.33</td>\n",
+       "      <td>14-Dec</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>1.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4472</th>\n",
+       "      <td>흥아해운(주)</td>\n",
+       "      <td>3280</td>\n",
+       "      <td>15-Dec</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>1.02</td>\n",
+       "      <td>1.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4473</th>\n",
+       "      <td>흥아해운(주)</td>\n",
+       "      <td>3280</td>\n",
+       "      <td>16-Dec</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4474</th>\n",
+       "      <td>흥아해운(주)</td>\n",
+       "      <td>3280</td>\n",
+       "      <td>17-Dec</td>\n",
+       "      <td>-0.61</td>\n",
+       "      <td>-0.42</td>\n",
+       "      <td>-0.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4475</th>\n",
+       "      <td>흥아해운(주)</td>\n",
+       "      <td>3280</td>\n",
+       "      <td>18-Dec</td>\n",
+       "      <td>-1.26</td>\n",
+       "      <td>-1.16</td>\n",
+       "      <td>-1.16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>535 rows × 6 columns</p>\n",
+       "<p>4476 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               회사명   거래소코드    회계년도 이자보상배율(이자비용)(IFRS) 이자보상배율(이자비용)(IFRS연결)  \\\n",
-       "0         (주)DB하이텍     990  11-Dec              -0.69                -0.75   \n",
-       "9         (주)HJ중공업   97230  11-Dec               0.34                 0.55   \n",
-       "18           (주)ST   11810  11-Dec               0.67                 1.66   \n",
-       "27        (주)TCC스틸    2710  11-Dec                1.8                 1.41   \n",
-       "36      (주)강스템바이오텍  217730  15-Dec              -5.41          77777777.77   \n",
-       "...            ...     ...     ...                ...                  ...   \n",
-       "4435  현대바이오사이언스(주)   48410  11-Dec             -17.26               -18.41   \n",
-       "4444       현우산업(주)   92300  11-Dec               2.86                 2.86   \n",
-       "4453       휴림로봇(주)   90710  11-Dec               3.57                 2.96   \n",
-       "4462       휴마시스(주)  205470  14-Dec        77777777.77                -0.76   \n",
-       "4468       흥아해운(주)    3280  11-Dec              -0.37                -0.33   \n",
+       "           회사명  거래소코드    회계년도 이자보상배율(이자비용)(IFRS) 이자보상배율(이자비용)(IFRS연결)  이자보상배율\n",
+       "0     (주)DB하이텍    990  11-Dec              -0.69                -0.75   -0.75\n",
+       "1     (주)DB하이텍    990  12-Dec              -0.29                -0.31   -0.31\n",
+       "2     (주)DB하이텍    990  13-Dec              -0.16                -0.16   -0.16\n",
+       "3     (주)DB하이텍    990  14-Dec               0.67                 0.67    0.67\n",
+       "4     (주)DB하이텍    990  15-Dec               2.49                  2.5    2.50\n",
+       "...        ...    ...     ...                ...                  ...     ...\n",
+       "4471   흥아해운(주)   3280  14-Dec               0.96                 1.12    1.12\n",
+       "4472   흥아해운(주)   3280  15-Dec               0.79                 1.02    1.02\n",
+       "4473   흥아해운(주)   3280  16-Dec               0.04                 0.21    0.21\n",
+       "4474   흥아해운(주)   3280  17-Dec              -0.61                -0.42   -0.42\n",
+       "4475   흥아해운(주)   3280  18-Dec              -1.26                -1.16   -1.16\n",
        "\n",
-       "      이자보상배율  \n",
-       "0      -0.75  \n",
-       "9       0.55  \n",
-       "18      1.66  \n",
-       "27      1.41  \n",
-       "36     -5.41  \n",
-       "...      ...  \n",
-       "4435  -18.41  \n",
-       "4444    2.86  \n",
-       "4453    2.96  \n",
-       "4462   -0.76  \n",
-       "4468   -0.33  \n",
-       "\n",
-       "[535 rows x 6 columns]"
+       "[4476 rows x 6 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 한계기업 후보 기업의 숫자는 밑에 카운트를 봅시다\n",
-    "a = df_5_frame.copy().drop_duplicates(['회사명'])\n",
+    "a = df_5_frame.copy()\n",
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1250,7 @@
        "[406 rows x 6 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1471,7 @@
        "[15150 rows x 7 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,9 +1482,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'매출액(수익)(*)(IFRS)(천원)'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\82104\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3621\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3620\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mc:\\Users\\82104\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\_libs\\index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\82104\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\_libs\\index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5198\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5206\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: '매출액(수익)(*)(IFRS)(천원)'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\82104\\OneDrive\\바탕 화면\\vscode\\프로젝트1\\.git\\jh\\2011년전체데이터 copy.ipynb 셀 25\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/82104/OneDrive/%EB%B0%94%ED%83%95%20%ED%99%94%EB%A9%B4/vscode/%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B81/.git/jh/2011%EB%85%84%EC%A0%84%EC%B2%B4%EB%8D%B0%EC%9D%B4%ED%84%B0%20copy.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39m이자스\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m (df[\u001b[39m'\u001b[39m\u001b[39m이자스\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m-\u001b[39m df[\u001b[39m'\u001b[39;49m\u001b[39m매출액(수익)(*)(IFRS)(천원)\u001b[39;49m\u001b[39m'\u001b[39;49m])\u001b[39m/\u001b[39mdf[\u001b[39m'\u001b[39m\u001b[39m매출액(수익)(*)(IFRS)(천원)\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "File \u001b[1;32mc:\\Users\\82104\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\frame.py:3505\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3503\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3504\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3505\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3506\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3507\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Users\\82104\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 3623\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3624\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3625\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3626\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3627\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3628\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: '매출액(수익)(*)(IFRS)(천원)'"
+     ]
+    }
+   ],
    "source": [
     "df['이자스'] = (df['이자스'] - df['매출액(수익)(*)(IFRS)(천원)'])/df['매출액(수익)(*)(IFRS)(천원)']"
    ]
