--- a/부실징후기업.ipynb
+++ b/부실징후기업.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "[9453 rows x 56 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,378 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>회사명</th>\n",
+       "      <th>거래소코드</th>\n",
+       "      <th>회계년도</th>\n",
+       "      <th>이자보상배율</th>\n",
+       "      <th>총자산증가율</th>\n",
+       "      <th>유형자산증가율</th>\n",
+       "      <th>유동자산증가율</th>\n",
+       "      <th>재고자산증가율</th>\n",
+       "      <th>자기자본증가율</th>\n",
+       "      <th>순이익증가율</th>\n",
+       "      <th>...</th>\n",
+       "      <th>자본집약도</th>\n",
+       "      <th>노동소득분배율</th>\n",
+       "      <th>설비투자효율</th>\n",
+       "      <th>총자본투자효율</th>\n",
+       "      <th>기계투자효율</th>\n",
+       "      <th>부가가치율</th>\n",
+       "      <th>종업원수증가율</th>\n",
+       "      <th>R &amp; D 투자효율</th>\n",
+       "      <th>무형자산처리무형자산개발비(천원)</th>\n",
+       "      <th>경상개발비(천원)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>(주)SNT에너지</td>\n",
+       "      <td>100840</td>\n",
+       "      <td>11-Dec</td>\n",
+       "      <td>-9.21</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>17.11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1502781.74</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-4.14</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>2.22</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>871757.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>(주)강스템바이오텍</td>\n",
+       "      <td>217730</td>\n",
+       "      <td>15-Dec</td>\n",
+       "      <td>-5.41</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-47.35</td>\n",
+       "      <td>...</td>\n",
+       "      <td>402945.58</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-96.67</td>\n",
+       "      <td>-0.12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.94</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>255.88</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3798708.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>(주)강원에너지</td>\n",
+       "      <td>114190</td>\n",
+       "      <td>11-Nov</td>\n",
+       "      <td>393.90</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-96.68</td>\n",
+       "      <td>...</td>\n",
+       "      <td>571479.44</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>328.31</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>4.84</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>14.63</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1388076.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>(주)고려시멘트</td>\n",
+       "      <td>198440</td>\n",
+       "      <td>14-Dec</td>\n",
+       "      <td>11111111.11</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-32.14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>(주)골드퍼시픽</td>\n",
+       "      <td>38530</td>\n",
+       "      <td>11-Dec</td>\n",
+       "      <td>14.16</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>465652.88</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>44.04</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>210.53</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>328368.0</td>\n",
+       "      <td>111530.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9388</th>\n",
+       "      <td>현우산업(주)</td>\n",
+       "      <td>92300</td>\n",
+       "      <td>11-Dec</td>\n",
+       "      <td>2.86</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>14.44</td>\n",
+       "      <td>...</td>\n",
+       "      <td>352335.33</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>32.34</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>14.63</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9401</th>\n",
+       "      <td>화성산업(주)</td>\n",
+       "      <td>2460</td>\n",
+       "      <td>15-Dec</td>\n",
+       "      <td>81.69</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-53.02</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1368431.71</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>133.20</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>12.66</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>-25.91</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9415</th>\n",
+       "      <td>휴림네트웍스(주)</td>\n",
+       "      <td>192410</td>\n",
+       "      <td>14-Dec</td>\n",
+       "      <td>11111111.11</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-87.35</td>\n",
+       "      <td>...</td>\n",
+       "      <td>391332.35</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>504.70</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9430</th>\n",
+       "      <td>휴마시스(주)</td>\n",
+       "      <td>205470</td>\n",
+       "      <td>14-Dec</td>\n",
+       "      <td>-0.76</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9436</th>\n",
+       "      <td>흥구석유(주)</td>\n",
+       "      <td>24060</td>\n",
+       "      <td>11-Dec</td>\n",
+       "      <td>10.35</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>-77.90</td>\n",
+       "      <td>...</td>\n",
+       "      <td>590334.98</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.36</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>-7.91</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>490 rows × 56 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             회사명   거래소코드    회계년도       이자보상배율  총자산증가율  유형자산증가율  유동자산증가율  \\\n",
+       "54     (주)SNT에너지  100840  11-Dec        -9.21  -100.0   -100.0   -100.0   \n",
+       "81    (주)강스템바이오텍  217730  15-Dec        -5.41  -100.0   -100.0   -100.0   \n",
+       "86      (주)강원에너지  114190  11-Nov       393.90  -100.0   -100.0   -100.0   \n",
+       "122     (주)고려시멘트  198440  14-Dec  11111111.11  -100.0   -100.0   -100.0   \n",
+       "137     (주)골드퍼시픽   38530  11-Dec        14.16  -100.0   -100.0   -100.0   \n",
+       "...          ...     ...     ...          ...     ...      ...      ...   \n",
+       "9388     현우산업(주)   92300  11-Dec         2.86  -100.0   -100.0   -100.0   \n",
+       "9401     화성산업(주)    2460  15-Dec        81.69  -100.0   -100.0   -100.0   \n",
+       "9415   휴림네트웍스(주)  192410  14-Dec  11111111.11  -100.0   -100.0   -100.0   \n",
+       "9430     휴마시스(주)  205470  14-Dec        -0.76  -100.0   -100.0   -100.0   \n",
+       "9436     흥구석유(주)   24060  11-Dec        10.35  -100.0   -100.0   -100.0   \n",
+       "\n",
+       "      재고자산증가율  자기자본증가율  순이익증가율  ...       자본집약도  노동소득분배율  설비투자효율  총자본투자효율  \\\n",
+       "54     -100.0   -100.0   17.11  ...  1502781.74      0.0   -4.14    -0.02   \n",
+       "81     -100.0   -100.0  -47.35  ...   402945.58      0.0  -96.67    -0.12   \n",
+       "86     -100.0   -100.0  -96.68  ...   571479.44      0.0  328.31     0.24   \n",
+       "122    -100.0   -100.0  -32.14  ...         NaN      NaN     NaN      NaN   \n",
+       "137    -100.0   -100.0     NaN  ...   465652.88      0.0   44.04     0.16   \n",
+       "...       ...      ...     ...  ...         ...      ...     ...      ...   \n",
+       "9388   -100.0   -100.0   14.44  ...   352335.33      0.0   32.34     0.20   \n",
+       "9401   -100.0   -100.0  -53.02  ...  1368431.71      0.0  133.20     0.15   \n",
+       "9415   -100.0   -100.0  -87.35  ...   391332.35      0.0  504.70     0.40   \n",
+       "9430   -100.0   -100.0     NaN  ...         NaN      NaN     NaN      NaN   \n",
+       "9436   -100.0   -100.0  -77.90  ...   590334.98      0.0   16.36     0.10   \n",
+       "\n",
+       "      기계투자효율  부가가치율  종업원수증가율  R & D 투자효율  무형자산처리무형자산개발비(천원)  경상개발비(천원)  \n",
+       "54     -0.33  -0.03     2.22        0.45                0.0   871757.0  \n",
+       "81       NaN  -1.94     0.00      255.88                0.0  3798708.0  \n",
+       "86      4.84   0.26    14.63        2.76                0.0  1388076.0  \n",
+       "122      NaN    NaN      NaN         NaN                NaN        NaN  \n",
+       "137     0.51   0.39   210.53        0.99           328368.0   111530.0  \n",
+       "...      ...    ...      ...         ...                ...        ...  \n",
+       "9388    0.41   0.22    14.63        0.00                0.0        0.0  \n",
+       "9401   12.66   0.15   -25.91        0.00                0.0        0.0  \n",
+       "9415    3.00   0.29     0.00        0.00                0.0        0.0  \n",
+       "9430     NaN    NaN      NaN         NaN                NaN        NaN  \n",
+       "9436    3.39   0.03    -7.91        0.00                NaN        0.0  \n",
+       "\n",
+       "[490 rows x 56 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['총자산증가율']==-100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
