--- a/5차테스트.ipynb
+++ b/5차테스트.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "      <th>0</th>\n",
        "      <td>(주)CMG제약</td>\n",
        "      <td>58820</td>\n",
-       "      <td>2011-12</td>\n",
+       "      <td>Dec-11</td>\n",
        "      <td>3.53</td>\n",
        "      <td>1.98</td>\n",
        "      <td>-5.90</td>\n",
@@ -146,7 +146,7 @@
        "      <th>1</th>\n",
        "      <td>(주)CMG제약</td>\n",
        "      <td>58820</td>\n",
-       "      <td>2012-12</td>\n",
+       "      <td>Dec-12</td>\n",
        "      <td>-7.75</td>\n",
        "      <td>109.15</td>\n",
        "      <td>-4.12</td>\n",
@@ -197,7 +197,7 @@
        "      <th>2</th>\n",
        "      <td>(주)CMG제약</td>\n",
        "      <td>58820</td>\n",
-       "      <td>2013-12</td>\n",
+       "      <td>Dec-13</td>\n",
        "      <td>0.70</td>\n",
        "      <td>-2.09</td>\n",
        "      <td>16.09</td>\n",
@@ -248,7 +248,7 @@
        "      <th>3</th>\n",
        "      <td>(주)CMG제약</td>\n",
        "      <td>58820</td>\n",
-       "      <td>2014-12</td>\n",
+       "      <td>Dec-14</td>\n",
        "      <td>3.60</td>\n",
        "      <td>3.86</td>\n",
        "      <td>74.30</td>\n",
@@ -299,7 +299,7 @@
        "      <th>4</th>\n",
        "      <td>(주)CMG제약</td>\n",
        "      <td>58820</td>\n",
-       "      <td>2015-12</td>\n",
+       "      <td>Dec-15</td>\n",
        "      <td>-32.22</td>\n",
        "      <td>-2.64</td>\n",
        "      <td>-5.37</td>\n",
@@ -398,61 +398,10 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9129</th>\n",
-       "      <td>흥아해운(주)</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>2014-12</td>\n",
-       "      <td>1.12</td>\n",
-       "      <td>13.69</td>\n",
-       "      <td>45.19</td>\n",
-       "      <td>-13.68</td>\n",
-       "      <td>7.76</td>\n",
-       "      <td>7.17</td>\n",
-       "      <td>5.61</td>\n",
-       "      <td>2.22</td>\n",
-       "      <td>11.37</td>\n",
-       "      <td>3.04</td>\n",
-       "      <td>2.25</td>\n",
-       "      <td>3.01</td>\n",
-       "      <td>1.35</td>\n",
-       "      <td>56.41</td>\n",
-       "      <td>14.83</td>\n",
-       "      <td>3.02</td>\n",
-       "      <td>17.07</td>\n",
-       "      <td>5.11</td>\n",
-       "      <td>1.84</td>\n",
-       "      <td>4.98</td>\n",
-       "      <td>-20.19</td>\n",
-       "      <td>65.25</td>\n",
-       "      <td>59.64</td>\n",
-       "      <td>8.09</td>\n",
-       "      <td>287.83</td>\n",
-       "      <td>29.09</td>\n",
-       "      <td>2.84</td>\n",
-       "      <td>1.66</td>\n",
-       "      <td>7.23</td>\n",
-       "      <td>25.78</td>\n",
-       "      <td>21.60</td>\n",
-       "      <td>23.63</td>\n",
-       "      <td>66.36</td>\n",
-       "      <td>140.48</td>\n",
-       "      <td>74.22</td>\n",
-       "      <td>8.60</td>\n",
-       "      <td>-16.14</td>\n",
-       "      <td>-12.59</td>\n",
-       "      <td>428397.42</td>\n",
-       "      <td>15.32</td>\n",
-       "      <td>859.92</td>\n",
-       "      <td>27.87566308</td>\n",
-       "      <td>13.89</td>\n",
-       "      <td>10.93</td>\n",
-       "      <td>119418.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>9130</th>\n",
        "      <td>흥아해운(주)</td>\n",
        "      <td>3280</td>\n",
-       "      <td>2015-12</td>\n",
+       "      <td>Dec-15</td>\n",
        "      <td>1.02</td>\n",
        "      <td>21.93</td>\n",
        "      <td>49.36</td>\n",
@@ -503,7 +452,7 @@
        "      <th>9131</th>\n",
        "      <td>흥아해운(주)</td>\n",
        "      <td>3280</td>\n",
-       "      <td>2016-12</td>\n",
+       "      <td>Dec-16</td>\n",
        "      <td>0.21</td>\n",
        "      <td>21.08</td>\n",
        "      <td>38.84</td>\n",
@@ -554,7 +503,7 @@
        "      <th>9132</th>\n",
        "      <td>흥아해운(주)</td>\n",
        "      <td>3280</td>\n",
-       "      <td>2017-12</td>\n",
+       "      <td>Dec-17</td>\n",
        "      <td>-0.42</td>\n",
        "      <td>-11.43</td>\n",
        "      <td>-16.50</td>\n",
@@ -605,7 +554,7 @@
        "      <th>9133</th>\n",
        "      <td>흥아해운(주)</td>\n",
        "      <td>3280</td>\n",
-       "      <td>2018-12</td>\n",
+       "      <td>Dec-18</td>\n",
        "      <td>-1.16</td>\n",
        "      <td>-5.33</td>\n",
        "      <td>-12.07</td>\n",
@@ -652,24 +601,75 @@
        "      <td>4.52</td>\n",
        "      <td>42782.54</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9134</th>\n",
+       "      <td>흥아해운(주)</td>\n",
+       "      <td>3280</td>\n",
+       "      <td>Dec-19</td>\n",
+       "      <td>-0.55</td>\n",
+       "      <td>-46.38</td>\n",
+       "      <td>-51.51</td>\n",
+       "      <td>-13.42</td>\n",
+       "      <td>-57.73</td>\n",
+       "      <td>-86.45</td>\n",
+       "      <td>5.54</td>\n",
+       "      <td>-50.27</td>\n",
+       "      <td>-98.70</td>\n",
+       "      <td>-2.00</td>\n",
+       "      <td>-12.10</td>\n",
+       "      <td>-8.32</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>7.28</td>\n",
+       "      <td>2.86</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>2.41</td>\n",
+       "      <td>1.96</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>-1.88</td>\n",
+       "      <td>46.36</td>\n",
+       "      <td>42.55</td>\n",
+       "      <td>6.75</td>\n",
+       "      <td>1293.83</td>\n",
+       "      <td>18.36</td>\n",
+       "      <td>-5.73</td>\n",
+       "      <td>-22.44</td>\n",
+       "      <td>-28.97</td>\n",
+       "      <td>7.17</td>\n",
+       "      <td>19.98</td>\n",
+       "      <td>21.77</td>\n",
+       "      <td>15.30</td>\n",
+       "      <td>654.44</td>\n",
+       "      <td>92.83</td>\n",
+       "      <td>8.22</td>\n",
+       "      <td>-7.11</td>\n",
+       "      <td>-25.18</td>\n",
+       "      <td>704760.75</td>\n",
+       "      <td>34.13</td>\n",
+       "      <td>1271.28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>13.08</td>\n",
+       "      <td>39428.47</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9134 rows × 48 columns</p>\n",
+       "<p>9135 rows × 48 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           회사명  거래소코드     회계년도  이자보상배율  총자산증가율  유형자산증가율  유동자산증가율  자기자본증가율  \\\n",
-       "0     (주)CMG제약  58820  2011-12    3.53    1.98    -5.90    17.64    -2.02   \n",
-       "1     (주)CMG제약  58820  2012-12   -7.75  109.15    -4.12   207.08    75.17   \n",
-       "2     (주)CMG제약  58820  2013-12    0.70   -2.09    16.09   -18.89    55.10   \n",
-       "3     (주)CMG제약  58820  2014-12    3.60    3.86    74.30   -25.93     0.01   \n",
-       "4     (주)CMG제약  58820  2015-12  -32.22   -2.64    -5.37    -7.17    -4.48   \n",
-       "...        ...    ...      ...     ...     ...      ...      ...      ...   \n",
-       "9129   흥아해운(주)   3280  2014-12    1.12   13.69    45.19   -13.68     7.76   \n",
-       "9130   흥아해운(주)   3280  2015-12    1.02   21.93    49.36   -11.18     3.39   \n",
-       "9131   흥아해운(주)   3280  2016-12    0.21   21.08    38.84   -25.08    11.22   \n",
-       "9132   흥아해운(주)   3280  2017-12   -0.42  -11.43   -16.50    13.29   -39.28   \n",
-       "9133   흥아해운(주)   3280  2018-12   -1.16   -5.33   -12.07    -6.33   -37.42   \n",
+       "           회사명  거래소코드    회계년도  이자보상배율  총자산증가율  유형자산증가율  유동자산증가율  자기자본증가율  \\\n",
+       "0     (주)CMG제약  58820  Dec-11    3.53    1.98    -5.90    17.64    -2.02   \n",
+       "1     (주)CMG제약  58820  Dec-12   -7.75  109.15    -4.12   207.08    75.17   \n",
+       "2     (주)CMG제약  58820  Dec-13    0.70   -2.09    16.09   -18.89    55.10   \n",
+       "3     (주)CMG제약  58820  Dec-14    3.60    3.86    74.30   -25.93     0.01   \n",
+       "4     (주)CMG제약  58820  Dec-15  -32.22   -2.64    -5.37    -7.17    -4.48   \n",
+       "...        ...    ...     ...     ...     ...      ...      ...      ...   \n",
+       "9130   흥아해운(주)   3280  Dec-15    1.02   21.93    49.36   -11.18     3.39   \n",
+       "9131   흥아해운(주)   3280  Dec-16    0.21   21.08    38.84   -25.08    11.22   \n",
+       "9132   흥아해운(주)   3280  Dec-17   -0.42  -11.43   -16.50    13.29   -39.28   \n",
+       "9133   흥아해운(주)   3280  Dec-18   -1.16   -5.33   -12.07    -6.33   -37.42   \n",
+       "9134   흥아해운(주)   3280  Dec-19   -0.55  -46.38   -51.51   -13.42   -57.73   \n",
        "\n",
        "      매출액증가율  매출액총이익율  매출액순이익율  자기자본순이익율  총자본영업이익율  매출액영업이익률  총자본순이익률  총자본회전율  \\\n",
        "0      56.40    41.83    -8.50     -8.28      2.37      3.61    -5.58    0.66   \n",
@@ -678,11 +678,11 @@
        "3      11.52    37.07     0.69      0.32      0.78      1.94     0.28    0.40   \n",
        "4      18.85    36.26   -13.50     -7.62     -4.49     -9.51    -6.37    0.47   \n",
        "...      ...      ...      ...       ...       ...       ...      ...     ...   \n",
-       "9129    7.17     5.61     2.22     11.37      3.04      2.25     3.01    1.35   \n",
        "9130    2.42     6.20     1.24      6.18      2.95      2.51     1.46    1.17   \n",
        "9131   -1.58     4.49    -2.06     -9.40      0.67      0.71    -1.96    0.95   \n",
        "9132    0.56     2.09    -8.79    -47.52     -1.45     -1.57    -8.13    0.93   \n",
        "9133   -9.87    -0.93   -11.48    -91.08     -4.55     -4.99   -10.47    0.91   \n",
+       "9134  -86.45     5.54   -50.27    -98.70     -2.00    -12.10    -8.32    0.17   \n",
        "\n",
        "      재고자산회전율  매출채권회전율  유형자산회전율  매입채무회전율  자기자본회전율  타인자본회전율  유동자산회전율  순운전자본회전율  \\\n",
        "0        3.74     2.29     1.77    11.95     0.97     2.01     1.25      4.61   \n",
@@ -691,24 +691,24 @@
        "3        3.00     1.85     1.54     5.27     0.46     2.85     0.68      2.32   \n",
        "4        3.32     2.09     1.48     5.66     0.56     2.88     0.99      3.10   \n",
        "...       ...      ...      ...      ...      ...      ...      ...       ...   \n",
-       "9129    56.41    14.83     3.02    17.07     5.11     1.84     4.98    -20.19   \n",
        "9130    64.23    17.20     2.09    16.05     4.96     1.54     5.83    -13.39   \n",
        "9131    53.94    17.35     1.44    16.26     4.55     1.20     6.98    -10.62   \n",
        "9132    43.17    15.61     1.36    15.39     5.41     1.12     7.68     -8.05   \n",
        "9133    39.24    12.79     1.43    11.87     7.93     1.03     6.73     -7.39   \n",
+       "9134     7.28     2.86     0.28     2.41     1.96     0.18     1.01     -1.88   \n",
        "\n",
-       "        유동비율    당좌비율    현금비율    부채비율  차입금의존도  CASH_FLOW_대_부채비율  \\\n",
-       "0     200.97  165.03   15.10   51.41    7.32            -46.08   \n",
-       "1     693.49  649.98   68.81   80.77    0.18             -8.10   \n",
-       "2     694.71  610.74  394.63   14.11    0.00            -39.85   \n",
-       "3     324.58  268.23  101.24   18.50    0.01            -17.73   \n",
-       "4     296.85  235.21   29.00   20.78    0.01             16.12   \n",
-       "...      ...     ...     ...     ...     ...               ...   \n",
-       "9129   65.25   59.64    8.09  287.83   29.09              2.84   \n",
-       "9130   51.92   47.54    7.76  357.39   24.52              2.78   \n",
-       "9131   39.46   32.52    5.46  397.97   19.03              2.12   \n",
-       "9132   35.76   29.58    6.17  626.32   22.90             -0.57   \n",
-       "9133   34.67   28.66    4.89  998.73   22.24             -2.78   \n",
+       "        유동비율    당좌비율    현금비율     부채비율  차입금의존도  CASH_FLOW_대_부채비율  \\\n",
+       "0     200.97  165.03   15.10    51.41    7.32            -46.08   \n",
+       "1     693.49  649.98   68.81    80.77    0.18             -8.10   \n",
+       "2     694.71  610.74  394.63    14.11    0.00            -39.85   \n",
+       "3     324.58  268.23  101.24    18.50    0.01            -17.73   \n",
+       "4     296.85  235.21   29.00    20.78    0.01             16.12   \n",
+       "...      ...     ...     ...      ...     ...               ...   \n",
+       "9130   51.92   47.54    7.76   357.39   24.52              2.78   \n",
+       "9131   39.46   32.52    5.46   397.97   19.03              2.12   \n",
+       "9132   35.76   29.58    6.17   626.32   22.90             -0.57   \n",
+       "9133   34.67   28.66    4.89   998.73   22.24             -2.78   \n",
+       "9134   46.36   42.55    6.75  1293.83   18.36             -5.73   \n",
        "\n",
        "      CASH_FLOW_대_매출액비율  CASH_FLOW_대_차입금비율  자기자본구성비율  당좌자산구성비율  유동자산구성비율  \\\n",
        "0                -24.07            -213.61     66.05     46.14     56.18   \n",
@@ -717,11 +717,11 @@
        "3                 -7.06          -29481.93     84.39     40.28     48.74   \n",
        "4                  5.80           24988.83     82.80     36.82     46.47   \n",
        "...                 ...                ...       ...       ...       ...   \n",
-       "9129               1.66               7.23     25.78     21.60     23.63   \n",
        "9130               2.03               8.85     21.86     15.76     17.21   \n",
        "9131               1.96               8.92     20.08      8.78     10.65   \n",
        "9132              -0.50              -2.13     13.77     11.27     13.63   \n",
        "9133              -2.70             -11.38      9.10     11.14     13.48   \n",
+       "9134             -22.44             -28.97      7.17     19.98     21.77   \n",
        "\n",
        "      매출채권_대_매입채무비율  유동부채비율  타인자본구성비율  재고자산_대_유동자산비율  재고자산_대_순운전자본비율  순운전자본비율  \\\n",
        "0            602.31   42.33     33.95          17.88           35.59    28.23   \n",
@@ -730,11 +730,11 @@
        "3            285.31   17.79     15.61          17.36           25.09    33.72   \n",
        "4            254.69   18.91     17.20          20.77           31.32    30.82   \n",
        "...             ...     ...       ...            ...             ...      ...   \n",
-       "9129          66.36  140.48     74.22           8.60          -16.14   -12.59   \n",
        "9130          60.44  151.66     78.14           8.43           -9.10   -15.94   \n",
        "9131          68.73  134.41     79.92          17.60          -11.47   -16.34   \n",
        "9132          65.00  276.77     86.23          17.27           -9.61   -24.48   \n",
        "9133          59.32  427.21     90.90          17.36           -9.21   -25.40   \n",
+       "9134          15.30  654.44     92.83           8.22           -7.11   -25.18   \n",
        "\n",
        "          노동장비율     기계장비율    자본집약도       설비투자효율  총자본투자효율  부가가치율  종업원1인딩부가가치  \n",
        "0      71726.36  29216.43   202.26  35.85819316    12.72  19.56    25719.78  \n",
@@ -743,16 +743,16 @@
        "3     113899.65  48479.94   354.08  37.80253285    12.16  31.04    43056.95  \n",
        "4     114246.59  53386.77   362.39            0     7.63  15.96    27662.63  \n",
        "...         ...       ...      ...          ...      ...    ...         ...  \n",
-       "9129  428397.42     15.32   859.92  27.87566308    13.89  10.93   119418.62  \n",
        "9130  593960.16     14.23   973.73  21.49400366    13.11  12.28   127665.82  \n",
        "9131  706868.14     12.28  1017.55  15.81260955    10.98  12.66   111774.30  \n",
        "9132  599097.86     12.56   921.78  8.349918093     5.43   5.51    50024.18  \n",
        "9133  618981.48     14.54  1009.67            0     4.24   4.52    42782.54  \n",
+       "9134  704760.75     34.13  1271.28            0     3.10  13.08    39428.47  \n",
        "\n",
-       "[9134 rows x 48 columns]"
+       "[9135 rows x 48 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,6 +777,18 @@
     "# 거래소 코드 6자리가 아닌 것들은 6자리가 될 때까지 앞에 0 추가\n",
     "# df['거래소코드'] = df['거래소코드'].astype(str).str.zfill(6)\n",
     "# df['거래소코드']\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['회사명'] = df['회사명'].str.replace('\\(','')\n",
+    "df['회사명'] = df['회사명'].str.replace('주','')\n",
+    "df['회사명'] = df['회사명'].str.replace('\\)','')\n",
     "df"
    ]
   },
