--- a/main/label.ipynb
+++ b/main/label.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "[8832 rows x 4 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "[8832 rows x 5 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -526,190 +526,44 @@
        "[8832 rows x 6 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_test['이보배2'] = df_test['이자보상배율'].shift(1).where(df_test['회사명']==(df_test['회사명']).shift(1))\n",
+    "df_test['이보배2'] = df_test['이자보상배율'].shift().where(df_test['회사명']==(df_test['회사명']).shift())\n",
     "df_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(0, len(df_test)-1):\n",
-    "    if df_test.iloc[i]['이보배2'] < 1 and df_test.iloc[i]['이자보상배율'] >= 1 and df_test.iloc[i]['부실기업']==1:\n",
-    "            df_test.loc[i, '회생여부'] = 1\n",
-    "    elif df_test.iloc[i]['회사명'] == df_test.iloc[i-1]['회사명'] and df_test.iloc[i]['회사명'] != df_test.iloc[i+1]['회사명']:\n",
-    "        if df_test.iloc[i-1]['이자보상배율'] < 1 and df_test.iloc[i]['이자보상배율'] >= 1:\n",
-    "            df_test.loc[i, '회생여부'] = 1"
+    "    if df_test.iloc[i]['회사명'] == df_test.iloc[i-1]['회사명'] and df_test.iloc[i]['회사명'] == df_test.iloc[i+1]['회사명']:\n",
+    "        if df_test.iloc[i-1]['이자보상배율'] < 1 and df_test.iloc[i]['이자보상배율'] >= 1 and df_test.iloc[i+1]['이자보상배율'] >= 1:\n",
+    "                df_test.loc[i+1, '회생여부'] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>회사명</th>\n",
-       "      <th>거래소코드</th>\n",
-       "      <th>회계년도</th>\n",
-       "      <th>이자보상배율</th>\n",
-       "      <th>부실기업</th>\n",
-       "      <th>이보배2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>(주)DB하이텍</td>\n",
-       "      <td>990</td>\n",
-       "      <td>11-Dec</td>\n",
-       "      <td>-0.75</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>(주)DB하이텍</td>\n",
-       "      <td>990</td>\n",
-       "      <td>12-Dec</td>\n",
-       "      <td>-0.31</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>(주)DB하이텍</td>\n",
-       "      <td>990</td>\n",
-       "      <td>13-Dec</td>\n",
-       "      <td>-0.16</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>(주)DB하이텍</td>\n",
-       "      <td>990</td>\n",
-       "      <td>14-Dec</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>(주)DB하이텍</td>\n",
-       "      <td>990</td>\n",
-       "      <td>15-Dec</td>\n",
-       "      <td>2.50</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>(주)DB하이텍</td>\n",
-       "      <td>990</td>\n",
-       "      <td>16-Dec</td>\n",
-       "      <td>4.41</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>(주)DB하이텍</td>\n",
-       "      <td>990</td>\n",
-       "      <td>17-Dec</td>\n",
-       "      <td>6.05</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>(주)DB하이텍</td>\n",
-       "      <td>990</td>\n",
-       "      <td>18-Dec</td>\n",
-       "      <td>6.77</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>(주)DB하이텍</td>\n",
-       "      <td>990</td>\n",
-       "      <td>19-Dec</td>\n",
-       "      <td>13.44</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>(주)ES큐브</td>\n",
-       "      <td>50120</td>\n",
-       "      <td>11-Dec</td>\n",
-       "      <td>-245.99</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>(주)ES큐브</td>\n",
-       "      <td>50120</td>\n",
-       "      <td>12-Dec</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-245.99</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         회사명  거래소코드    회계년도  이자보상배율  부실기업    이보배2\n",
-       "9   (주)DB하이텍    990  11-Dec   -0.75   0.0     NaN\n",
-       "10  (주)DB하이텍    990  12-Dec   -0.31   1.0   -0.75\n",
-       "11  (주)DB하이텍    990  13-Dec   -0.16   1.0   -0.31\n",
-       "12  (주)DB하이텍    990  14-Dec    0.67   1.0   -0.16\n",
-       "13  (주)DB하이텍    990  15-Dec    2.50   0.0    0.67\n",
-       "14  (주)DB하이텍    990  16-Dec    4.41   0.0    2.50\n",
-       "15  (주)DB하이텍    990  17-Dec    6.05   0.0    4.41\n",
-       "16  (주)DB하이텍    990  18-Dec    6.77   0.0    6.05\n",
-       "17  (주)DB하이텍    990  19-Dec   13.44   0.0    6.77\n",
-       "18   (주)ES큐브  50120  11-Dec -245.99   0.0     NaN\n",
-       "19   (주)ES큐브  50120  12-Dec    1.72   0.0 -245.99"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_test[9:20]"
+    "df_test['회생여부'] = df_test['회생여부'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test.to_csv('t+2회생여부.csv',encoding='cp949',index=False)"
    ]
   },
   {
